--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "monaco-editor": "^0.40.0",
+    "pretty-bytes": "^6.1.0",
     "reset.css": "^2.0.2",
     "view-ui-plus": "^1.3.14",
     "vue": "^3.3.4",
