--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/loader": "^1.3.3",
     "monaco-editor": "^0.40.0",
     "pretty-bytes": "^6.1.0",
     "reset.css": "^2.0.2",
