--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@monaco-editor/loader": "^1.3.3",
     "monaco-editor": "^0.40.0",
+    "pinia": "^2.1.4",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "pretty-bytes": "^6.1.0",
     "reset.css": "^2.0.2",
+    "tdesign-vue-next": "^1.3.11",
     "view-ui-plus": "^1.3.14",
     "vue": "^3.3.4",
     "vue-router": "4"
@@ -22,6 +25,8 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "less": "^4.1.3",
     "typescript": "^5.0.2",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.0",
     "vue-tsc": "^1.8.3"
   }
