--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/loader": "^1.3.3",
+    "lodash": "^4.17.21",
     "monaco-editor": "^0.40.0",
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.1.0",
