--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@monaco-editor/loader": "^1.3.3",
     "chardet": "^1.6.0",
+    "eventemitter3": "^5.0.1",
+    "fuzzysort": "^2.0.4",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.40.0",
     "pinia": "^2.1.4",
