--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@monaco-editor/loader": "^1.3.3",
     "chardet": "^1.6.0",
     "eventemitter3": "^5.0.1",
+    "file2md5": "^1.3.0",
     "fuzzysort": "^2.0.4",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.40.0",
